--- a/main.css
+++ b/main.css
@@ -2,10 +2,13 @@ body {
     display: flex;
     flex-direction: column;
     min-width: 375px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
-    flex: 0 80px;
+    flex: 0 50px;
+    padding: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 main {
@@ -14,10 +17,12 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }  
 
 footer {
     flex: 0 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
   
 @media (max-height: 600px) {
