Fixes to the login fields and removing image

--- a/main.css
+++ b/main.css
@@ -21,7 +21,8 @@ main {
   }  
 
 footer {
-    flex: 0 30px;
+    flex: 0 50px;
+    padding: 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
   
