--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     min-width: 375px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
 }
 
 header {
@@ -25,6 +26,10 @@ footer {
     padding: 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+footer a {
+    float: right;
+  }
   
 @media (max-height: 600px) {
     header {
