--- a/post.css
+++ b/post.css
@@ -3,3 +3,19 @@
     margin: 20 px;
     padding: 20px;
 }
+
+footer img {
+    width: 10%;
+    text-align: center;
+    align-items: center;
+    margin: 10px 0;
+}
+
+footer {
+    align-items: center; /* Center items horizontally */
+    justify-content: center; /* Center items vertically if needed */
+}
+
+footer span {
+    text-align: left;
+}
