--- a/src/feed/feed.css
+++ b/src/feed/feed.css
@@ -14,6 +14,16 @@ header a {
     margin: 0;
 }
 
+main {
+    margin: 10px;
+    flex: 1 calc(100vh - 110px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }  
+
 .workout-container{
     background-color: aliceblue;
     padding: 20px;
