--- a/src/post/post.css
+++ b/src/post/post.css
@@ -12,8 +12,8 @@ footer img {
 }
 
 footer {
-    align-items: center; /* Center items horizontally */
-    justify-content: center; /* Center items vertically if needed */
+    align-items: center;
+    justify-content: center;
 }
 
 footer span {
