CSS and styling changes to new login page

--- a/src/app.css
+++ b/src/app.css
@@ -21,6 +21,10 @@ main {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }  
 
+.playerName {
+  color: black;
+}
+
 menu {
   flex: 1;
   display: flex;
