--- a/src/login/authenticated.css
+++ b/src/login/authenticated.css
@@ -1,5 +1,6 @@
 .playerName {
-  color: rgb(118, 190, 210);
+  color: rgb(0, 0, 0);
   font-size: 1.5em;
   padding: 0.5em;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
